--- a/index.html
+++ b/index.html
@@ -9,13 +9,12 @@
 </head>
 
 <body>
-  <div id="login-form">
-    <form id="login-form">
-      <input required maxlength="15" type="text" placeholder="What is your name?" />
-      <button>Log In</button>
-    </form>
-  </div>
-  <script src="script.js"></script>
+  <form id="login-form">
+    <input type="text" required maxlength="15" placeholder="What is your name?" />
+    <input type="submit" value="Log in" />
+  </form>
+  <h1 id="greeting" class="hidden"></h1>
+  <script src="app.js"></script>
 </body>
 
 </html>
