--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <form id="login-form">
-    <input type="text" required maxlength="15" placeholder="What is your name?" />
+    <input type="text" required maxlength="15" placeholder="What's your name?" />
     <input type="submit" value="Log in" />
   </form>
   <h1 id="greeting" class="hidden"></h1>
