--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <form id="login-form">
+  <form class = "hidden" id="login-form">
     <input type="text" required maxlength="15" placeholder="What's your name?" />
     <input type="submit" value="Log in" />
   </form>
