--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   <h2 id = "clock">00:00</h2>
   <script src="js/greeting.js"></script>
   <script src = "js/clock.js"></script>
+  <script src = js/quotes.js></script>
 </body>
 
 </html>
