--- a/index.html
+++ b/index.html
@@ -3,21 +3,27 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
+    <!-- 중복된 스타일시트 링크 제거 -->
     <link rel="stylesheet" href="css/style.css" />
     <title>Momentum App</title>
   </head>
 
 <body>
-  <form class = "hidden" id="login-form">
-    <input type="text" required maxlength="15" placeholder="What's your name?" />
+  <form class="hidden" id="login-form">
+    <input required maxlength="15" type="text" placeholder="What's your name?" />
     <input type="submit" value="Log in" />
   </form>
   <h1 id="greeting" class="hidden"></h1>
-  <h2 id = "clock">00:00</h2>
-  <script src="js/greeting.js"></script>
-  <script src = "js/clock.js"></script>
-  <script src = js/quotes.js></script>
+  <h2 id="clock">00:00</h2>
+  <div id="quote">
+    <span></span>
+    <br/>
+    <span></span>
+  </div>
+  <script src="js/greetings.js"></script>
+  <script src="js/clock.js"></script>
+  <script src="js/quotes.js"></script>
+  <script src="js/background.js"></script>
 </body>
 
 </html>
